<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/primary_text_light"/>
    <EditText
        android:hint="@string/latitude_hint"
        android:id="@+id/latitudeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="115dp"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
    <EditText
        android:hint="@string/longitude_lint"
        android:id="@+id/longitudeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/latitudeEditText"
        android:layout_alignParentLeft="true"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:layout_above="@+id/stopButton"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_text"
        android:layout_marginBottom="98dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>


</RelativeLayout>

